--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -1,6 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The matrix-vector form of this optimization problem is:\n",
+    "$f(x) = \\tilde{w}^{T} \\tilde{x},\\\n",
+    "where:\\  w \\in \\mathbb{R}^8, x \\in \\mathbb{R}^8, y \\in \\mathbb{R}^8$\n",
+    "\\begin{equation}\n",
+    "\\tilde{w} = \n",
+    "\\begin{bmatrix}\n",
+    "  w_1\\\\\n",
+    "  w_2\\\\\n",
+    "  w_3\\\\\n",
+    "  w_4\\\\\n",
+    "  w_5\\\\\n",
+    "  w_6\\\\\n",
+    "  w_7\\\\\n",
+    "  b\\\\\n",
+    "\\end{bmatrix},\n",
+    "\\tilde{x} = \n",
+    "\\begin{bmatrix}\n",
+    "  x_1\\\\\n",
+    "  x_2\\\\\n",
+    "  x_3\\\\\n",
+    "  x_4\\\\\n",
+    "  x_5\\\\\n",
+    "  x_6\\\\\n",
+    "  x_7\\\\\n",
+    "  1\\\\\n",
+    "\\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
