--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -5,8 +5,9 @@
    "metadata": {},
    "source": [
     "The matrix-vector form of this optimization problem is:\n",
+    "\n",
     "$f(x) = \\tilde{w}^{T} \\tilde{x},\\\n",
-    "where:\\  w \\in \\mathbb{R}^8, x \\in \\mathbb{R}^8, y \\in \\mathbb{R}^8$\n",
+    "where:\\  \\tilde{w} \\in \\mathbb{R}^8, \\tilde{x} \\in \\mathbb{R}^8, y \\in \\mathbb{R}$\n",
     "\\begin{equation}\n",
     "\\tilde{w} = \n",
     "\\begin{bmatrix}\n",
@@ -31,7 +32,7 @@
     "  1\\\\\n",
     "\\end{bmatrix}\n",
     "\\end{equation}\n",
-    "\n",
+    "And $x_1,x_2,...,x_7$ is our 7-dimensional inputs.\n",
     "\n"
    ]
   },
