--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "The matrix-vector form of this optimization problem is:\n",
     "\n",
-    "$f(x) = \\tilde{w}^{T} \\tilde{x},\\\n",
+    "Minimizing $f(x) = \\tilde{w}^{T} \\tilde{x},\\\n",
     "where:\\  \\tilde{w} \\in \\mathbb{R}^8, \\tilde{x} \\in \\mathbb{R}^8, y \\in \\mathbb{R}$\n",
     "\\begin{equation}\n",
     "\\tilde{w} = \n",
@@ -430,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.0"
   },
   "vscode": {
    "interpreter": {
