--- a/Part3/Part3.ipynb
+++ b/Part3/Part3.ipynb
@@ -205,7 +205,7 @@
     "$m_i$ is the prior probability of each cluster, so $\\sum_k m_k = 1$\n",
     "And \n",
     "\n",
-    "$\\mu_i$ is the mean with dimension of (channels)$\n",
+    "$\\mu_i$ is the mean color vector with dimension of (1,channels)$\n",
     "\n",
     "$C_i$ is the cov matrix with dimensions (channels, channels).\n",
     "\n",
