--- a/Part3/Part3.ipynb
+++ b/Part3/Part3.ipynb
@@ -188,13 +188,16 @@
    "source": [
     "Part b:\n",
     "\n",
+    "In this part, each entry in an array represents each row in a matrix in the equations.\n",
+    "All the entities are in bold.\n",
+    "\n",
     "Step1:\n",
     "Get the dimentions of image as in starter code.\n",
     "height, width, channels = original_image.shape\n",
     "\n",
     "Step2:\n",
     "Need to reshape the  image to X for processing with GMM.\n",
-    "Where X:(height*width, channels).\n",
+    "Where **X**:(height*width, channels).\n",
     "This creates a matrix where each row corresponds to a pixel and each column represents a color channel.\n",
     "\n",
     "Step3:\n",
@@ -202,12 +205,12 @@
     "And initialize the GMM parameters.\n",
     "$\\theta = (m_{1:K}, \\mu_{1:K}, C_{1:K} )$\n",
     "Where \n",
-    "$m_i$ is the prior probability of each cluster, so $\\sum_k m_k = 1$\n",
+    "**$m_i$** is the prior probability of each cluster, so $\\sum_k m_k = 1$\n",
     "And \n",
     "\n",
-    "$\\mu_i$ is the mean color vector with dimension of (1,channels)$\n",
+    "**$\\mu_i$** is the mean color vector with dimension of (1,channels)$\n",
     "\n",
-    "$C_i$ is the cov matrix with dimensions (channels, channels).\n",
+    "**$C_i$** is the cov matrix with dimensions (channels, channels).\n",
     "\n",
     "Step4: run the EM algorithm.\n",
     "E-Step:\n",
@@ -223,10 +226,26 @@
     "\n",
     "$C_j = \\frac{\\sum_i \\gamma_{i,j} (X_i - \\mu_j)(X_i - \\mu_j)^T}{\\sum_i \\gamma_{i,j}}$\n",
     "\n",
-    "Where N is the number of Rows in X which is height * width\n",
+    "Where **N** is the number of Rows in X which is height * width\n",
     "\n",
     "Step5:\n",
-    "After the GMM converged, we will obtain a list of labels"
+    "After the GMM converged, we will obtain the **labels** list with dimension (height*width).\n",
+    "\n",
+    "for each data point i (row in X) do:\n",
+    "$ \\gamma_{i,j} = \\frac {m_j*G(X_i;\\mu_i,C_j)}{\\sum_K m_k*G(X_i;\\mu_k,C_k)} $\n",
+    "\n",
+    "Where G is the Probability density function of a Gaussian distribution.\n",
+    "\n",
+    "find the value j with highest $\\gamma_{i,j}$ value and assign the point to cluster j, which means update the correspond position in labels list with value j.\n",
+    "\n",
+    "Step6:\n",
+    "Follow the same logic, create the **compressed_image** with dimensions (height*width, channels). \n",
+    "\n",
+    "To be specific,\n",
+    "for every entry i in labels,\n",
+    "update  compressed_image[i]=$\\mu$[labels[i]]\n",
+    "\n",
+    "Then, we can save the compressed_image in png format using cv2.imwrite()"
    ]
   }
  ],
