--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -4,11 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The matrix-vector form of this optimization problem is:\n",
-    "\n",
-    "Minimizing $f(x) = \\tilde{w}^{T} \\tilde{x},\\\n",
-    "where:\\  \\tilde{w} \\in \\mathbb{R}^8, \\tilde{x} \\in \\mathbb{R}^8, y \\in \\mathbb{R}$\n",
-    "\\begin{equation}\n",
+    "Suppose we have:\n",
+    "$\\tilde{w} \\in \\mathbb{R}^8, \\tilde{x} \\in \\mathbb{R}^8, y \\in \\mathbb{R}^{400} , \\tilde{X} \\in \\mathbb{R}^{400*8} $\n",
+    "$$\\begin{equation}\n",
     "\\tilde{w} = \n",
     "\\begin{bmatrix}\n",
     "  w_1\\\\\n",
@@ -31,8 +29,37 @@
     "  x_7\\\\\n",
     "  1\\\\\n",
     "\\end{bmatrix}\n",
-    "\\end{equation}\n",
+    "\\end{equation}$$\n",
     "And $x_1,x_2,...,x_7$ is our 7-dimensional inputs.\n",
+    "\n",
+    "We have 400 inputs\n",
+    "we have\n",
+    "$$\\tilde{X} = \n",
+    "\\begin{bmatrix}\n",
+    "  \\tilde{x}_1^T     \\quad 1 \\\\\n",
+    "  \\tilde{x}_2^T     \\quad 1 \\\\\n",
+    "  \\tilde{x}_3^T     \\quad 1 \\\\\n",
+    "  .\\\\\n",
+    "  .\\\\\n",
+    "  .\\\\\n",
+    "  \\tilde{x}_{400} \\quad 1 \\\\\n",
+    "\\end{bmatrix},\n",
+    "\n",
+    "\\tilde{y} = \n",
+    "\\begin{bmatrix}\n",
+    "  y_1\\\\\n",
+    "  y_2\\\\\n",
+    "  y_3\\\\\n",
+    "  .\\\\\n",
+    "  .\\\\\n",
+    "  .\\\\\n",
+    "  y_{400}\\\\\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "So the optimization problem is minimizing:\n",
+    "$$\n",
+    "E(\\tilde{w}) = || y- \\tilde{X}\\tilde{w}||^2\n",
+    "$$\n",
     "\n"
    ]
   },
