--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -29,12 +29,14 @@
     "  x_7\\\\\n",
     "  1\\\\\n",
     "\\end{bmatrix}\n",
-    "\\end{equation}$$\n",
+    "\\end{equation}\n",
+    "$$\n",
     "And $x_1,x_2,...,x_7$ is our 7-dimensional inputs.\n",
     "\n",
     "We have 400 inputs\n",
     "we have\n",
-    "$$\\tilde{X} = \n",
+    "$$\n",
+    "\\tilde{X} = \n",
     "\\begin{bmatrix}\n",
     "  \\tilde{x}_1^T     \\quad 1 \\\\\n",
     "  \\tilde{x}_2^T     \\quad 1 \\\\\n",
@@ -56,6 +58,7 @@
     "  y_{400}\\\\\n",
     "\\end{bmatrix}\n",
     "$$\n",
+    "\n",
     "So the optimization problem is minimizing:\n",
     "$$\n",
     "E(\\tilde{w}) = || y- \\tilde{X}\\tilde{w}||^2\n",
