--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "Suppose we have:\n",
     "$\\tilde{w} \\in \\mathbb{R}^8, \\tilde{x} \\in \\mathbb{R}^8, y \\in \\mathbb{R}^{400} , \\tilde{X} \\in \\mathbb{R}^{400*8} $\n",
-    "$$\\begin{equation}\n",
+    "$$\n",
+    "\\begin{equation}\n",
     "\\tilde{w} = \n",
     "\\begin{bmatrix}\n",
     "  w_1\\\\\n",
