--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -36,16 +36,18 @@
     "\n",
     "We have 400 inputs\n",
     "we have\n",
+    "\n",
+    "\n",
     "$$\n",
     "\\tilde{X} = \n",
     "\\begin{bmatrix}\n",
-    "  \\tilde{x}_1^T     \\quad 1 \\\\\n",
-    "  \\tilde{x}_2^T     \\quad 1 \\\\\n",
-    "  \\tilde{x}_3^T     \\quad 1 \\\\\n",
+    "  \\tilde{x}_1^T      1 \\\\\n",
+    "  \\tilde{x}_2^T      1 \\\\\n",
+    "  \\tilde{x}_3^T      1 \\\\\n",
     "  .\\\\\n",
     "  .\\\\\n",
     "  .\\\\\n",
-    "  \\tilde{x}_{400} \\quad 1 \\\\\n",
+    "  \\tilde{x}_{400}  1 \\\\\n",
     "\\end{bmatrix},\n",
     "\n",
     "\\tilde{y} = \n",
