--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -41,13 +41,13 @@
     "$$\n",
     "\\tilde{X} = \n",
     "\\begin{bmatrix}\n",
-    "  \\tilde{x}_1^T      1 \\\\\n",
-    "  \\tilde{x}_2^T      1 \\\\\n",
-    "  \\tilde{x}_3^T      1 \\\\\n",
+    "  \\tilde{x}_1^T ~ 1 \\\\\n",
+    "  \\tilde{x}_2^T ~ 1 \\\\\n",
+    "  \\tilde{x}_3^T  ~1 \\\\\n",
     "  .\\\\\n",
     "  .\\\\\n",
     "  .\\\\\n",
-    "  \\tilde{x}_{400}  1 \\\\\n",
+    "  \\tilde{x}_{400}^T ~  1 \\\\\n",
     "\\end{bmatrix},\n",
     "\n",
     "\\tilde{y} = \n",
