--- a/A2/Q3.ipynb
+++ b/A2/Q3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "49330a0c",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "d10c25c7",
    "metadata": {},
    "outputs": [],
@@ -22,22 +22,22 @@
     "    return 1 / (1 + np.exp(-x))\n",
     "\n",
     "\n",
-    "# Gradient descent function\n",
     "def gradient_descent(X, y, theta, learning_rate, iterations):\n",
-    "\n",
-    "    cost_history = np.zeros(iterations)\n",
+    "    # Make a copy of the original theta values\n",
+    "    theta_copy = theta.copy()\n",
     "\n",
     "    for i in range(iterations):\n",
-    "        p = sigmoid(np.dot(X, theta))\n",
+    "        p = sigmoid(np.dot(X, theta_copy))\n",
     "        gradient = np.dot(X.T, (p - y))\n",
-    "        theta -= learning_rate * gradient\n",
+    "        # Update the copy of theta\n",
+    "        theta_copy -= learning_rate * gradient\n",
     "\n",
-    "    return theta"
+    "    return theta_copy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "74265631",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "c7004912",
    "metadata": {},
    "outputs": [
@@ -59,6 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[ 0.3 -0.2  0.7]\n",
       "[ 0.20477175 -0.35426438  0.68685387]\n",
       "6\n"
      ]
@@ -66,6 +67,7 @@
    ],
    "source": [
     "#first iteration\n",
+    "print(theta_0)\n",
     "theta = gradient_descent(X, y, theta_0, learning_rate, 1)\n",
     "print(theta)\n",
     "y_pred = np.round(sigmoid(np.dot(X, theta)))\n",
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "8f351f00",
    "metadata": {},
    "outputs": [
@@ -83,13 +85,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.27208574 -0.35574855  0.69978802]\n",
-      "7\n"
+      "[ 0.3 -0.2  0.7]\n",
+      "[ 0.10954349 -0.50852876  0.67370775]\n",
+      "3\n"
      ]
     }
    ],
    "source": [
     "#second iteration\n",
+    "print(theta_0)\n",
     "theta = gradient_descent(X, y, theta_0, learning_rate, 2)\n",
     "print(theta)\n",
     "y_pred = np.round(sigmoid(np.dot(X, theta)))\n",
@@ -99,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "86152130",
    "metadata": {
     "scrolled": true
@@ -109,8 +113,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.33601437 -0.39214756  0.71342568]\n",
-      "7\n"
+      "[ 0.01431524 -0.66279314  0.66056162]\n",
+      "3\n"
      ]
     }
    ],
@@ -125,18 +129,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ace60fd0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1. 0. 1. 0.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "P = np.array([[3,3,1],[4,10,1],[9,8,1],[9,10,1]])\n",
     "y_pred = np.round(sigmoid(np.dot(P, theta)))\n",
@@ -176,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
