--- a/A2/Q4.ipynb
+++ b/A2/Q4.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +49,9 @@
     "X_train_features = X_train[:, :-1]\n",
     "y_train = X_train[:, -1]\n",
     "\n",
-    "#print(X_train)\n",
-    "#print(y_train)\n"
+    "X_test_features = X_test[:, :-1]\n",
+    "y_test = X_test[:, -1]\n",
+    "\n"
    ]
   },
   {
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,38 +72,41 @@
     "def train_naive_bayes(X_train, y_train):\n",
     "\n",
     "    num_classes = 5\n",
-    "    num_features = X_train.shape[1] - 1\n",
-    "    \n",
+    "    num_features = X_train.shape[1]\n",
     "    # Convert term frequencies to binary representation\n",
-    "    binary_train_data = np.where(X_train[:, :-1] > 0, 1, 0)\n",
+    "    binary_train_data =  np.where(X_train > 0, 1, 0)\n",
     "\n",
-    "\n",
-    "     # Calculate class probabilities\n",
-    "    class_probs = defaultdict(int)\n",
-    "\n",
+    "    \n",
+    "    class_probs = [1/2,1/2,1/2,1/2,1/2]\n",
+    "    class_count=[0,0,0,0,0]\n",
     "    for label in y_train:\n",
-    "        class_probs[label] += 1\n",
+    "        class_count[label] += 1\n",
     "    total_docs = len(y_train)\n",
     "\n",
-    "    for label in class_probs:\n",
-    "        class_probs[label] /= total_docs\n",
+    "    for c in range(5):\n",
+    "        class_probs[c] =  class_count[c] / total_docs\n",
     "\n",
     "\n",
     "    # # Calculate term probabilities with Laplace smoothing\n",
-    "    term_probs = np.zeros((num_classes, num_features))\n",
-    "\n",
+    "    term_occ = np.zeros((num_classes, num_features))\n",
+    "    aij = np.zeros((num_classes, num_features))\n",
     "\n",
     "    for i in range(len(binary_train_data)):\n",
     "        label = y_train[i]\n",
-    "        term_probs[label] += binary_train_data[i]\n",
-    "    \n",
+    "        term_occ[label] += binary_train_data[i]\n",
     "\n",
-    "    for label in range(num_classes):\n",
-    "        total_terms = num_features + 2  # Laplace smoothing\n",
-    "        term_probs[label] = (term_probs[label] + 1) / total_terms\n",
     "    \n",
-    "    print(term_probs)\n",
-    "    return class_probs, term_probs\n"
+    "    for label in range(5):\n",
+    "        for i in range(num_features):\n",
+    "            if term_occ[label][i] == 0:\n",
+    "                # Apply Laplace smoothing only if the term probability is 0\n",
+    "                aij[label][i] = 1 / (class_count[label] + 2)\n",
+    "            else:\n",
+    "                # If the term probability is not 0, use the original probability\n",
+    "                aij[label][i] = term_occ[label][i] / class_count[label]\n",
+    "\n",
+    "    \n",
+    "    return class_probs, aij\n"
    ]
   },
   {
@@ -114,52 +118,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[2.31783283e-03 2.60756193e-03 1.44864552e-03 ... 2.41440919e-05\n",
-      "  2.41440919e-05 2.41440919e-05]\n",
-      " [2.07373272e-03 1.61290323e-03 2.63331139e-04 ... 3.29163924e-05\n",
-      "  3.29163924e-05 3.29163924e-05]\n",
-      " [2.48968395e-03 2.07473662e-04 5.53263100e-04 ... 2.30526292e-05\n",
-      "  2.30526292e-05 2.30526292e-05]\n",
-      " [2.76536382e-03 5.43196464e-04 3.20979729e-04 ... 2.46907484e-05\n",
-      "  2.46907484e-05 2.46907484e-05]\n",
-      " [1.78746594e-03 1.24250681e-03 2.83378747e-04 ... 8.71934605e-05\n",
-      "  6.53950954e-05 6.53950954e-05]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def predict_naive_bayes(X_test, class_probs, term_probs):\n",
     "    predictions = []\n",
-    "    \n",
+    "    num_features = X_test.shape[1]\n",
     "    # Convert term frequencies to binary representation\n",
-    "    binary_test_data = np.where(X_test[:, :-1] > 0, 1, 0)\n",
+    "    binary_test_data =  np.where(X_test > 0, 1, 0)\n",
     "\n",
-    "    for i in range(len(binary_test_data)):\n",
-    "        scores = defaultdict(float)\n",
-    "        for label, class_prob in class_probs.items():\n",
-    "            scores[label] += np.log(class_prob)\n",
-    "            for j in range(len(binary_test_data[i])):\n",
-    "                scores[label] += binary_test_data[i][j] * np.log(term_probs[label][j])\n",
     "\n",
-    "        predicted_label = max(scores, key=scores.get)\n",
-    "        predictions.append(predicted_label)\n",
-    "\n",
-    "    return predictions\n",
-    "\n",
+    "    for k in range(len(binary_test_data)):\n",
+    "        alpha = [0,0,0,0,0]\n",
+    "        for j in range(5):\n",
+    "            for i in range(num_features):\n",
+    "                if binary_test_data[k][i] != 0:\n",
+    "                    alpha[j] += np.log(term_probs[j][i])\n",
+    "                else:\n",
+    "                    alpha[j] += np.log(1-term_probs[j][i])\n",
+    "            alpha[j] += np.log(class_probs[j])\n",
+    "        gamma = np.min(alpha)\n",
+    "        posterier = [0,0,0,0,0]\n",
+    "        exp = np.sum(np.exp(alpha-gamma))\n",
+    "        for j in range(5):\n",
+    "            posterier[j] = np.exp(alpha[j] - gamma)/exp\n",
+    "        predictions.append(np.argmax(posterier))\n",
+    "    return np.array(predictions)\n",
     "\n",
     "\n",
     "# Train the model\n",
-    "class_probabilities, conditional_probabilities = train_naive_bayes(X_train_features, y_train)\n",
+    "class_probs, term_probs = train_naive_bayes(X_train_features, y_train)\n",
     "\n",
     "# Predict on the test set\n",
-    "y_pred = predict_naive_bayes(X_test[:, :-1], class_probabilities, conditional_probabilities)"
+    "y_pred = predict_naive_bayes(X_test_features, class_probs, term_probs)"
    ]
   },
   {
@@ -171,25 +163,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Accuracy: 98.46%\n",
+      "Testing Accuracy: 95.36%\n"
+     ]
+    }
+   ],
    "source": [
-    "def calculate_accuracy(expected, actual):\n",
-    "    correct_num=0\n",
-    "    for i in range(expected.shape[0]):\n",
-    "        if (expected[i,0] == actual[i,0]):\n",
-    "            correct_num += 1\n",
-    "    return correct_num/expected.shape[0]\n",
+    "train_predictions = predict_naive_bayes(X_train_features, class_probs, term_probs)\n",
+    "test_predictions = predict_naive_bayes(X_test_features, class_probs, term_probs)\n",
     "\n",
+    "# Compare predictions with actual labels\n",
+    "train_accuracy = np.mean(train_predictions == y_train)\n",
+    "test_accuracy = np.mean(test_predictions == y_test)\n",
     "\n",
-    "# calculate accuracy of training data\n",
-    "accuracy_train = calculate_accuracy(NB_result_train, X_train[:,X_train.shape[1]-1].reshape((X_train.shape[0], 1)))\n",
-    "print(\"The accuracy of training data is \", accuracy_train, \"\\n\")\n",
-    "\n",
-    "# calculate accuracy of testing data\n",
-    "accuracy_test = calculate_accuracy(NB_result_test, X_test[:,X_test.shape[1]-1].reshape((X_test.shape[0], 1)))\n",
-    "print(\"The accuracy of testing data is \", accuracy_test, \"\\n\")\n"
+    "# Print classification accuracy\n",
+    "print(f\"Training Accuracy: {train_accuracy * 100:.2f}%\")\n",
+    "print(f\"Testing Accuracy: {test_accuracy * 100:.2f}%\")\n"
    ]
   },
   {
@@ -208,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
