--- a/A2/Q4.ipynb
+++ b/A2/Q4.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,15 @@
     "    data[int(doc_id), int(term_id)] = int(frequency)\n",
     "\n",
     "# Populate the last column of data with class labels\n",
-    "data[:, -1] = classes[:, 1]\n",
-    "\n",
+    "data[:, -1] = classes[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X_train, X_test = train_test_split(data, test_size=0.3)\n",
     "\n",
     "# Separate features and target\n",
@@ -50,8 +57,7 @@
     "y_train = X_train[:, -1]\n",
     "\n",
     "X_test_features = X_test[:, :-1]\n",
-    "y_test = X_test[:, -1]\n",
-    "\n"
+    "y_test = X_test[:, -1]"
    ]
   },
   {
@@ -63,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,15 +169,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Accuracy: 98.46%\n",
-      "Testing Accuracy: 95.36%\n"
+      "Training Accuracy: 98.65%\n",
+      "Testing Accuracy: 96.26%\n"
      ]
     }
    ],
@@ -204,14 +210,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
     "freq = pd.read_table(\"bbc/bbc.mtx\", skiprows=2, sep=' ', header=None).astype(int).to_numpy()\n",
     "classes = pd.read_table(\"bbc/bbc.classes\", index_col=False, skiprows=4, sep=' ', header=None).astype(int).to_numpy()\n",
     "terms = pd.read_table(\"bbc/bbc.terms\", header=None).to_numpy()\n",
@@ -229,10 +231,15 @@
     "    data[int(doc_id), int(term_id)] = int(frequency)\n",
     "\n",
     "# Populate the last column of data with class labels\n",
-    "data[:, -1] = classes[:, 0]\n",
-    "\n",
+    "data[:, -1] = classes[:, 1]\n",
     "X_train, X_test = train_test_split(data, test_size=0.3)\n",
-    "\n"
+    "\n",
+    "# Separate features and target\n",
+    "X_train_features = X_train[:, :-1]\n",
+    "y_train = X_train[:, -1]\n",
+    "\n",
+    "X_test_features = X_test[:, :-1]\n",
+    "y_test = X_test[:, -1]"
    ]
   },
   {
@@ -244,41 +251,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       ...,\n",
+       "       [2, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [1, 0, 0, ..., 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def predict_naive_bayes(X, class_probabilities, conditional_probabilities):\n",
-    "    predictions = []\n",
-    "    for x in X:\n",
-    "        posteriors = []\n",
-    "        for c in class_probabilities.keys():\n",
-    "            prior = np.log(class_probabilities[c])\n",
-    "            conditional = np.log(conditional_probabilities[c] * x + (1 - conditional_probabilities[c]) * (1 - x)).sum()\n",
-    "            posterior = prior + conditional\n",
-    "            posteriors.append((c, posterior))\n",
-    "        predictions.append(max(posteriors, key=lambda x: x[1])[0])\n",
-    "    return np.array(predictions)\n",
-    "\n",
-    "# Train the model\n",
-    "class_probabilities, conditional_probabilities = train_naive_bayes(X_train_features, y_train)\n",
-    "\n",
-    "# Predict on the test set\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Predict"
+    "X_test_features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calculate_class_statistics(X_train, y_train):\n",
+    "    unique_classes = np.unique(y_train)\n",
+    "    class_stats = {}\n",
+    "\n",
+    "    for class_ in unique_classes:\n",
+    "        class_features = X_train[y_train == class_]\n",
+    "        class_stats[class_] = {\n",
+    "            'mean': np.mean(class_features, axis=0),\n",
+    "            'covariance': np.cov(class_features, rowvar=False)\n",
+    "        }\n",
+    "\n",
+    "    return class_stats\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def log_multivariate_gaussian_pdf(x, mu, sigma):\n",
+    "    n = mu.shape[0]\n",
+    "    log_det_sigma = calculate_log_det(sigma)\n",
+    "    sigma_inv = np.linalg.inv(sigma + np.eye(sigma.shape[0]) * 0.0001)  # Regularized inverse\n",
+    "    log_normalization_factor = -0.5 * (n * np.log(2 * np.pi) + log_det_sigma)\n",
+    "\n",
+    "    diff = x - mu\n",
+    "    exponent = -0.5 * np.dot(np.dot(diff.T, sigma_inv), diff)\n",
+    "\n",
+    "    return log_normalization_factor + exponent\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gcc_classify(X, class_stats, priors):\n",
+    "    predictions = []\n",
+    "    for doc in X:\n",
+    "        class_probs = {}\n",
+    "        for class_, stats in class_stats.items():\n",
+    "            class_prob = np.log(priors[class_])\n",
+    "            mean, covariance = stats['mean'], stats['covariance']\n",
+    "            # Regularize the covariance matrix\n",
+    "            class_prob += log_multivariate_gaussian_pdf(doc, mean, covariance)\n",
+    "            class_probs[class_] = class_prob\n",
+    "        predictions.append(max(class_probs, key=class_probs.get))\n",
+    "    return np.array(predictions)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_priors(y_train):\n",
+    "    unique_classes, counts = np.unique(y_train, return_counts=True)\n",
+    "    total_docs = len(y_train)\n",
+    "    priors = {class_: count / total_docs for class_, count in zip(unique_classes, counts)}\n",
+    "    return priors\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_log_det(sigma):\n",
+    "    # Regularize the covariance matrix\n",
+    "    regularized_sigma = sigma + np.eye(sigma.shape[0]) * 0.0001\n",
+    "    det = np.linalg.det(regularized_sigma)\n",
+    "    if det <= 0:\n",
+    "        # Handling non-positive determinant by returning a very large negative number\n",
+    "        return -np.inf\n",
+    "    return np.log(det)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/gq/5v7478z94cjfrvy9shjn1vbw0000gn/T/ipykernel_33542/1711727202.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Predict on test set\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mgcc_predictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgcc_classify\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test_features\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclass_stats\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpriors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Evaluate the classifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/gq/5v7478z94cjfrvy9shjn1vbw0000gn/T/ipykernel_33542/781911110.py\u001b[0m in \u001b[0;36mgcc_classify\u001b[0;34m(X, class_stats, priors)\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0mmean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcovariance\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'mean'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'covariance'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m             \u001b[0;31m# Regularize the covariance matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m             \u001b[0mclass_prob\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mlog_multivariate_gaussian_pdf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdoc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcovariance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m             \u001b[0mclass_probs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mclass_\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclass_prob\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mpredictions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclass_probs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclass_probs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/gq/5v7478z94cjfrvy9shjn1vbw0000gn/T/ipykernel_33542/2549991884.py\u001b[0m in \u001b[0;36mlog_multivariate_gaussian_pdf\u001b[0;34m(x, mu, sigma)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmu\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mlog_det_sigma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcalculate_log_det\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msigma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0msigma_inv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msigma\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meye\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msigma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m0.0001\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Regularized inverse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mlog_normalization_factor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m0.5\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mlog_det_sigma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/numpy/linalg/linalg.py\u001b[0m in \u001b[0;36minv\u001b[0;34m(a)\u001b[0m\n\u001b[1;32m    559\u001b[0m     \u001b[0msignature\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'D->D'\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0misComplexType\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m'd->d'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    560\u001b[0m     \u001b[0mextobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_linalg_error_extobj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_raise_linalgerror_singular\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 561\u001b[0;31m     \u001b[0mainv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_umath_linalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msignature\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msignature\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mextobj\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mextobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    562\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mwrap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mainv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult_t\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    563\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate priors, class statistics\n",
+    "priors = calculate_priors(y_train)\n",
+    "class_stats = calculate_class_statistics(X_train_features, y_train)\n",
+    "\n",
+    "# Predict on test set\n",
+    "gcc_predictions = gcc_classify(X_test_features, class_stats, priors)\n",
+    "\n",
+    "# Evaluate the classifier\n",
+    "accuracy = np.mean(gcc_predictions == y_test)\n",
+    "print(\"GCC Classifier Accuracy:\", accuracy)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -297,7 +414,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -311,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
