--- a/A2/Q4.ipynb
+++ b/A2/Q4.ipynb
@@ -371,9 +371,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set GCC Classifier Accuracy: 0.9685393258426966\n",
+      "Test set GCC Classifier Accuracy: 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate priors, class statistics\n",
     "priors = calculate_priors(y_train)\n",
@@ -385,7 +394,7 @@
     "X_train_predictions = gcc_classify(X_train_features, class_means, invcovs, priors) \n",
     "\n",
     "test_accuracy = np.mean(X_test_predictions == y_test)\n",
-    "train_accuracy_accuracy = np.mean(X_train_predictions == y_train)\n",
+    "train_accuracy = np.mean(X_train_predictions == y_train)\n",
     "print(\"Test set GCC Classifier Accuracy:\", test_accuracy)\n",
     "print(\"Test set GCC Classifier Accuracy:\", train_accuracy)\n"
    ]
