--- a/A2/A2_StarterCode.ipynb
+++ b/A2/A2_StarterCode.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 49,
    "metadata": {
     "scrolled": false
    },
@@ -297,7 +297,7 @@
        "(514, 140)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,14 +365,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import KFold\n",
     "\n",
     "def cross_validation(X, y, k, num_folds):\n",
-    "    kf = KFold(n_splits=num_folds)\n",
+    "    kf = KFold(n_splits=num_folds,random_state=42,shuffle=True)\n",
     "    accuracies = []\n",
     "\n",
     "    for train_index, test_index in kf.split(X):\n",
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,16 +424,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7158230734154127"
+       "0.7141130870953032"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true
    },
@@ -455,7 +455,7 @@
        "4"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
      "output_type": "stream",
      "text": [
       "Accuracy: 0.7283464566929134\n",
-      "Elapsed time: 1.0092790126800537 seconds\n"
+      "Elapsed time: 1.9667937755584717 seconds\n"
      ]
     }
    ],
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 66,
    "metadata": {
     "scrolled": true
    },
@@ -606,10 +606,10 @@
     {
      "data": {
       "text/plain": [
-       "0.7159826721386229"
+       "0.7101231190150479"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,16 +627,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "17"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
      "output_type": "stream",
      "text": [
       "Accuracy: 0.6811023622047244\n",
-      "Elapsed time: 1.1792099475860596 seconds\n"
+      "Elapsed time: 1.7357261180877686 seconds\n"
      ]
     }
    ],
