--- a/A2/A2_StarterCode.ipynb
+++ b/A2/A2_StarterCode.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "id": "J1grKKjV-nzO",
     "outputId": "2b07549d-7ba6-4e10-dd9d-b232e58d6d35"
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "id": "0CQf65BS-nzT",
     "outputId": "37de0002-4906-4e99-a47f-609be2f2fade"
@@ -50,7 +50,7 @@
        "'\\nPlease install this specific version of resampy for librosa to work without errors.\\n'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "id": "7FE1qM7n-nzU",
     "outputId": "02c7b706-8c9c-42b4-ed25-b98f7cd915de"
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "id": "_hwFIUlFzTYw",
     "outputId": "9419a67b-5c1d-47e0-a7f5-ec9b9cad5bca"
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "id": "GWrZdqrp2E98"
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "id": "vSe0sBT12HgO"
    },
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "id": "aER6S-_k2a9H",
     "scrolled": true
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "(768, 140)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -259,7 +259,7 @@
        "(768,)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,16 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, binary_label, test_size=0.33, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, binary_label, test_size=0.33, random_state=42)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 47,
    "metadata": {
     "scrolled": false
    },
@@ -297,7 +297,7 @@
        "(514, 140)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,14 +365,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import KFold\n",
     "\n",
     "def cross_validation(X, y, k, num_folds):\n",
-    "    kf = KFold(n_splits=num_folds)\n",
+    "    kf = KFold(n_splits=num_folds, shuffle=True, random_state=42)\n",
     "    accuracies = []\n",
     "\n",
     "    for train_index, test_index in kf.split(X):\n",
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,16 +424,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7158230734154127"
+       "0.7316689466484269"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 56,
    "metadata": {
     "scrolled": true
    },
@@ -452,10 +452,10 @@
     {
      "data": {
       "text/plain": [
-       "4"
+       "8"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,20 +468,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using K=4 for test data"
+    "# Using K=8 for test data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7283464566929134\n",
-      "Elapsed time: 1.0092790126800537 seconds\n"
+      "Accuracy: 0.7362204724409449\n",
+      "Elapsed time: 0.40126538276672363 seconds\n"
      ]
     }
    ],
@@ -492,7 +492,7 @@
     "# Start time\n",
     "start_time = time.time()\n",
     "\n",
-    "k = 4\n",
+    "k = 8\n",
     "y_pred = knn_classifier(X_train, y_train, X_test, k)\n",
     "accuracy = calculate_accuracy(y_test, y_pred)\n",
     "print(\"Accuracy:\", accuracy)\n",
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,14 +561,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Variance: 0.9693805835676846\n"
+      "Explained Variance: 0.9699622432044445\n"
      ]
     }
    ],
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 62,
    "metadata": {
     "scrolled": true
    },
@@ -606,10 +606,10 @@
     {
      "data": {
       "text/plain": [
-       "0.7159826721386229"
+       "0.7181030551755585"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,16 +627,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "18"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,15 +654,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.6811023622047244\n",
-      "Elapsed time: 1.1792099475860596 seconds\n"
+      "Accuracy: 0.7244094488188977\n",
+      "Elapsed time: 0.38744115829467773 seconds\n"
      ]
     }
    ],
@@ -672,7 +672,7 @@
     "# Start time\n",
     "start_time = time.time()\n",
     "\n",
-    "k = 6\n",
+    "k = 18\n",
     "y_pred = knn_classifier(X_train_pca, y_train, X_test_pca, k)\n",
     "accuracy = calculate_accuracy(y_test, y_pred)\n",
     "print(\"Accuracy:\", accuracy)\n",
@@ -711,7 +711,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
